# elegoo-homeassistant2022

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  README_COMPAT_2022.5.5.txt  README_MINIMAL.txt  SPOOLMAN.md  TOPICS_TO_ADD.txt  debug.py  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  lint.yml
custom_components/elegoo_neptune4plus/: __init__.py  button.py  camera.py  config_flow.py  const.py  manifest.json  number.py  sdcp.py  sensor.py
custom_components/elegoo_neptune4pro/: __init__.py  button.py  camera.py  config_flow.py  const.py  manifest.json  number.py  sdcp.py  sensor.py
custom_components/elegoo_printer/: __init__.py  api.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  data.py  image.py  light.py  manifest.json  sensor.py
custom_components/elegoo_printer/cc2/: models.py
custom_components/elegoo_printer/mqtt/: __init__.py  client.py  server.py
custom_components/elegoo_printer/sdcp/: __init__.py
custom_components/elegoo_printer/translations/: ar.json  (+7 more)
elegoo_printer/: .devcontainer.json  .gitignore  AGENTS.md  DEVELOPMENT.md  README.md
elegoo_printer/config/: configuration.yaml
elegoo_printer/docs/: CC2_PROTOCOL.md
elegoo_printer/scripts/: cc2_mqtt_debug.py  extract_cc2_data.py  test_cc2_printer.py  test_mqtt_printer.py  test_server.py
scripts/: README_CC2_EXTRACTION.md  setup  start  test_embedded_mqtt_broker.py
(+73 files in other folders)
