[project]
name = "elegoo_printer"
version = "2.8.0-ha2022.5.5"
requires-python = ">=3.13"
description = "Home Assistant Addon for Elegoo Printers"
dependencies = [
    "aiomqtt>=2.4.0",
    "colorlog>=6.9.0",
    "homeassistant==2025.4.0",
    "loguru>=0.7.3",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "amqtt>=0.11.3",
    "paho-mqtt>=2.1.0",
    "pre-commit>=4.5.1",
    "pytest>=8.4.1",
    "ruff>=0.9.10",
    "ty>=0.0.1a21",
]
[tool.ruff]
target-version = "py313"
exclude = [
  "scripts",
  "debug.py",
]

[tool.ruff.lint]
select = [
    "ALL",
]

ignore = [
    "ANN401",
    "D203",
    "D212",
    "COM812",
    "ISC001",
    "UP041",
]

fixable = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
"custom_components/elegoo_printer/sdcp/tests/*.py" = ["S101"]
"custom_components/elegoo_printer/websocket/tests/*.py" = ["S101"]
"custom_components/elegoo_printer/tests/*.py" = ["S101", "D102"]
"custom_components/elegoo_printer/cc2/tests/*.py" = ["S101", "SLF001", "PLC0415"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = ["custom_components"]
norecursedirs = ["scripts"]
